# rs_workspace

./: .gitignore  pyproject.toml
src/rs_workspace/: __init__.py  frameworks.py  link_deps.py  main.py  paths.py  project.py  project_manager.py  setup_workspace.py  workspace.py
